HW/proj/scaler_to_vpss_v1_0/scaler_to_vpss_v1_0.sdk/.metadata/.plugins/org.eclipse.cdt.ui/hdmi_in_out.build.log
15:53:42 **** Auto Build of configuration Debug for project hdmi_in_out ****
make all 
'Building file: ../src/framebuffer.c'
'Invoking: ARM gcc compiler'
arm-xilinx-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/framebuffer.o" -I../../hdmi_in_out_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/framebuffer.d" -MT"src/framebuffer.d" -o "src/framebuffer.o" "../src/framebuffer.c"
'Finished building: ../src/framebuffer.c'
' '
'Building file: ../src/helloworld.c'
'Invoking: ARM gcc compiler'
arm-xilinx-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -I../../hdmi_in_out_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.d" -o "src/helloworld.o" "../src/helloworld.c"
In file included from ../src/vid_io_intf.h:16:0,
                 from ../src/helloworld.c:51:
../../hdmi_in_out_bsp/ps7_cortexa9_0/include/fmc_imageon.h:3:1: warning: multi-line comment [-Wcomment]
 //     /     \
 ^
In file included from ../../hdmi_in_out_bsp/ps7_cortexa9_0/include/fmc_imageon.h:78:0,
                 from ../src/vid_io_intf.h:16,
                 from ../src/helloworld.c:51:
../../hdmi_in_out_bsp/ps7_cortexa9_0/include/fmc_iic.h:3:1: warning: multi-line comment [-Wcomment]
 //     /     \
 ^
In file included from ../../hdmi_in_out_bsp/ps7_cortexa9_0/include/fmc_iic.h:57:0,
                 from ../../hdmi_in_out_bsp/ps7_cortexa9_0/include/fmc_imageon.h:78,
                 from ../src/vid_io_intf.h:16,
                 from ../src/helloworld.c:51:
../../hdmi_in_out_bsp/ps7_cortexa9_0/include/xbasic_types.h:115:2: warning: #warning The xbasics_type.h file is deprecated and users should use xil_types.h and xil_assert. [-Wcpp]
 #warning  The xbasics_type.h file is deprecated and users should use xil_types.h and xil_assert.
  ^
../../hdmi_in_out_bsp/ps7_cortexa9_0/include/xbasic_types.h:116:2: warning: #warning Please refer the Standalone BSP UG647 for further details [-Wcpp]
 #warning  Please refer the Standalone BSP UG647 for further details
  ^
In file included from ../src/helloworld.c:55:0:
../src/video_resolution.h:3:1: warning: multi-line comment [-Wcomment]
 //     /     \
 ^
../src/helloworld.c: In function 'main':
../src/helloworld.c:125:7: error: 'XPAR_VIDEO_PATH_HDMI_IN_VTD_DEVICE_ID' undeclared (first use in this function)
       XPAR_VIDEO_PATH_HDMI_IN_VTD_DEVICE_ID,
       ^
../src/helloworld.c:125:7: note: each undeclared identifier is reported only once for each function it appears in
../src/helloworld.c:127:10: error: 'XPAR_VIDEO_PATH_V_PROC_SS_0_DEVICE_ID' undeclared (first use in this function)
          XPAR_VIDEO_PATH_V_PROC_SS_0_DEVICE_ID,
          ^
../src/helloworld.c:128:10: error: 'XPAR_VIDEO_PATH_FRAMEBUFFER_NEW_AXI_VDMA_NEW_DEVICE_ID' undeclared (first use in this function)
          XPAR_VIDEO_PATH_FRAMEBUFFER_NEW_AXI_VDMA_NEW_DEVICE_ID,
          ^
../src/helloworld.c:129:7: error: 'XPAR_VIDEO_PATH_HDMI_OUT_VTG_DEVICE_ID' undeclared (first use in this function)
       XPAR_VIDEO_PATH_HDMI_OUT_VTG_DEVICE_ID,
       ^
../src/helloworld.c: In function 'initHDMI':
../src/helloworld.c:219:2: warning: implicit declaration of function 'scaler_new_set_input_size' [-Wimplicit-function-declaration]
  (
  ^
../src/helloworld.c: In function 'periphs_update_output_fsize':
../src/helloworld.c:279:2: warning: implicit declaration of function 'scaler_new_set_output_size' [-Wimplicit-function-declaration]
  (
  ^
make: *** [src/helloworld.o] Error 1

15:53:43 Build Finished (took 894ms)

